--- a/services/web/src/views/main/main.css
+++ b/services/web/src/views/main/main.css
@@ -26,7 +26,7 @@ body {
 }
 
 .mainBody .sidebar, .mainBody .sidebar .btn {
-  color: #80858d;
+  color: #000000;
 }
 
 header {
@@ -34,7 +34,7 @@ header {
 }
 
 .mainBody .sidebar .btn.active {
-  color: #adb5bd;
+  color: #000000;
 }
 
 .mainBody .sidebar .btn {
